--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
@@ -21,17 +22,24 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mqtt": "^5.3.0",
+    "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
+    "redis": "^4.6.12",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
+    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-jwt": "^7.4.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/mqtt": "^2.5.0",
+    "@types/multer": "^1.4.11",
+    "@types/node-schedule": "^2.1.5",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
     "prisma": "^5.6.0"
   }
