--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mqtt": "^5.3.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/mqtt": "^2.5.0",
+    "@types/multer": "^1.4.11",
     "@types/uuid": "^9.0.2",
     "prisma": "^5.6.0"
   }
