change build script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/server.ts",
-    "build": "tsc && cp .env.production ./dist/.env"
+    "build": "tsc && cp .env.production ./dist/.env && cp -R ./public ./dist/public"
   },
   "author": "",
   "license": "ISC",
