--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.7.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
+    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-jwt": "^7.4.2",
