--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "mqtt": "^5.3.0",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/morgan": "^1.9.4",
     "@types/mqtt": "^2.5.0",
     "@types/multer": "^1.4.11",
+    "@types/node-schedule": "^2.1.5",
     "@types/uuid": "^9.0.2",
     "prisma": "^5.6.0"
   }
