--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules
-# Keep environment variables out of version control
 .env
 .env.production
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.ttf
 /dist
-/public/images
+/public
