--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/server.ts",
-    "build": "tsc && cp .env.production ./dist/.env"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +41,7 @@
     "@types/node-schedule": "^2.1.5",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
-    "prisma": "^5.6.0"
+    "prisma": "^5.6.0",
+    "typescript": "^5.3.3"
   }
 }
