--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/server.ts",
+    "start": "ts-node-dev src/app.ts",
     "build": "tsc && pm2 restart TMS"
   },
   "author": "",
@@ -25,7 +25,11 @@
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "redis": "^4.6.12",
-    "uuid": "^9.0.0"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.0",
+    "zod": "^3.23.4",
+    "zod-validation-error": "^3.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,6 +42,7 @@
     "@types/morgan": "^1.9.4",
     "@types/mqtt": "^2.5.0",
     "@types/multer": "^1.4.11",
+    "@types/node": "^20.12.2",
     "@types/node-schedule": "^2.1.5",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.2",
