--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
     /* Language and Environment */
-    "target": "es2016", 
+    "target": "ES2020",
     /* Modules */
-    "module": "commonjs",
+    "module": "CommonJS",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    /* Dir */
     "rootDir": "./src",
     "outDir": "./dist",
     /* JavaScript Support */
-    "allowJs": true,
+    // "allowJs": true,
     /* Emit */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
