--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/app.ts",
-    "build": "tsc && pm2 restart TMS"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
