--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "redis": "^4.6.12",
+    "socket.io-client": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
@@ -44,6 +45,7 @@
     "@types/node": "^20.12.2",
     "@types/node-schedule": "^2.1.5",
     "@types/redis": "^4.0.11",
+    "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^9.0.2",
     "prisma": "^5.6.0",
     "typescript": "^5.3.3"
