--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "node-schedule": "^2.1.1",
     "redis": "^4.6.12",
     "socket.io-client": "^4.7.5",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
+    "yaml": "^2.4.4",
     "zod": "^3.23.4",
     "zod-validation-error": "^3.2.0"
   },
@@ -46,7 +46,9 @@
     "@types/node-schedule": "^2.1.5",
     "@types/redis": "^4.0.11",
     "@types/socket.io-client": "^3.0.0",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.2",
+    "@types/yaml": "^1.9.7",
     "prisma": "^5.6.0",
     "typescript": "^5.3.3"
   }
