--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@prisma/extension-read-replicas": "^0.3.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.2.0",
@@ -32,6 +33,7 @@
     "zod-validation-error": "^3.2.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
     "@types/date-fns": "^2.6.0",
